@@ -3,6 +3,7 @@ X-editable changelog
 
 Version 1.4.5 wip
 ----------------------------
+[bug #156] conflict of bootstrap datepicker and jQuery UI datepicker (vitalets)
 [enh] update bootstrap-datepicker to 1.1.2 (vitalets)
 [enh] allow follow links in disabled state (vitalets)
 [enh] update combodate to 1.0.4, fix #222 (vitalets)
